--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+// тут вставить url репозитория на гите"
+    "url": "git+https://github.com/YehorSavin/images-finder"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "// тут вставить url репозитория на гите"
+    "url": "https://github.com/YehorSavin/images-finder"
   },
-
-  "homepage": "// тут вставить url GitHub Pages после команды npm run deploy",
+  "homepage": "",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
