--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/YehorSavin/images-finder"
+    "url": "git+https://github.com/IC3CLD/image-finder"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/YehorSavin/images-finder"
+    "url": "https://github.com/IC3CLD/image-finder"
   },
-  "homepage": "",
+  "homepage": "https://ic3cld.github.io/image-finder/",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
@@ -45,5 +45,10 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.1.4",
     "webpackbar": "^4.0.0"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.11.5",
+    "basiclightbox": "^5.0.3",
+    "lodash.debounce": "^4.0.8"
   }
 }
