--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/IC3CLD/image-finder"
+    "url": "git+https://github.com/YehorSavin/images-finder/"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/IC3CLD/image-finder"
+    "url": "https://github.com/YehorSavin/images-finder/"
   },
-  "homepage": "https://ic3cld.github.io/image-finder/",
+  "homepage": "https://yehorsavin.github.io/images-finder/",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
